--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
     width: 100px;
     height: 100px;
     background: red;
-    animation: invisible 3s infinite;
+    animation: invisible 3s linear infinite;
      
 }
 
@@ -79,13 +79,136 @@
     width: 500px;
 }
 
+.ex-6-img{
+    transition: filter 2s;
+}
+
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+
+.ex-7-img{
+    width: 500px;
+    animation: ex7 4s linear infinite ;
+}
+
+@keyframes ex7 {
+    0%{
+        filter: contrast(0);
+        filter: invert(0);
+    }
+    25%{
+        filter: contrast(0.25);
+        filter: invert(0.25);  
+    }
+    50%{
+        filter: contrast(0.5);
+        filter: invert(0.5); 
+    }
+    75%{
+        filter: contrast(0.75);
+        filter: invert(0.75);
+    }
+    100%{
+        filter: contrast(1);
+        filter: invert(1);
+    }
+}
+
+.ex-8-img{
+ animation: ex8 4s linear infinite;
+}
+
+@keyframes ex8 {
+    0%{
+        filter: contrast(0);
+        filter: invert(0);
+        border-radius: 0%;
+    }
+    25%{
+        filter: contrast(0.25);
+        filter: invert(0.25); 
+        border-radius: 3%; 
+    }
+    50%{
+        filter: contrast(0.5);
+        filter: invert(0.5); 
+        border-radius: 6%;
+    }
+    75%{
+        filter: contrast(0.75);
+        filter: invert(0.75);
+        border-radius: 9%;
+    }
+    100%{
+        filter: contrast(1);
+        filter: invert(1);
+        border-radius: 12%;
+    }
+}
+
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    animation: ex9 4s linear 1;
 }
+
+@keyframes ex9 {
+    0%{
+        filter: contrast(0);
+        filter: invert(0);
+        border-radius: 0%;
+        width: 400px;
+    }
+    25%{
+        filter: contrast(0.25);
+        filter: invert(0.25); 
+        border-radius: 3%; 
+        width: 450px;
+    }
+    50%{
+        filter: contrast(0.5);
+        filter: invert(0.5); 
+        border-radius: 6%;
+        width: 500px;
+    }
+    75%{
+        filter: contrast(0.75);
+        filter: invert(0.75);
+        border-radius: 9%;
+        width: 550px;
+    }
+    100%{
+        filter: contrast(1);
+        filter: invert(1);
+        border-radius: 12%;
+        width: 600px;
+    }
+}
+
 .ex-10-icon {
     font-size: 60px;
+    animation: rotate 2s linear infinite;
 }
+
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg);
+    }
+    25%{
+        transform: rotate(90deg);
+    }
+    50%{
+        transform: rotate(180deg)
+    }
+    75%{
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 .ex-11-icon {
     font-size: 60px;
 }
