--- a/style.css
+++ b/style.css
@@ -211,7 +211,27 @@
 
 .ex-11-icon {
     font-size: 60px;
+    animation: rotate11 2s linear infinite;
 }
+
+@keyframes rotate11 {
+    0%{
+        transform: rotate(0deg);
+    }
+    25%{
+        transform: rotate(90deg);
+    }
+    50%{
+        transform: rotate(180deg)
+    }
+    75%{
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
+}
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -241,3 +261,5 @@
     width: 60px;
     height: 20px;
 }
+
+.
